[workspace]
members = [
    "crates/01-manual-future",
    "crates/02-wait-future",
    "crates/03-mini-executor",
    "crates/04-command-driver",
    "crates/05-mock-transport",
    "crates/06-sans-io-core",
    "crates/07-runtime-agnostic-driver",
    "crates/08-tokio-adapter",
    "crates/09-backpressure-cancellation",
    "crates/10-replication-toy",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
publish = false

[workspace.dependencies]
bytes = "1"
futures = "0.3"
pin-project-lite = "0.2"
